<resources>
    <string name="app_name">OOP Warehouse Location</string>
    <string name="warehouse_logo">Warehouse logo</string>
    <!--AUTH-->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_account">Create Account</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="name_label">Name:</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_action">SIGN UP</string>
    <string name="sign_in_action">SIGN IN</string>
    <string name="no_account">Don\'t have an Account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="create_your">Create your</string>
    <string name="account">account</string>
    <string name="account_type">Account type</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>


</resources>