<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage"
    android:background="@color/pink"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/editTextText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.083" />

        <TextView
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.152" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/pink"
            app:hintEnabled="false"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/statusInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/account_type"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:simpleItems="@array/accountType" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--First name Input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/pink"
            app:hintEnabled="false"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/FirstNameInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/first_name"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Last name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/pink"
            app:hintEnabled="false"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LastnameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Email Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/pink"
            app:hintEnabled="false"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailAddressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/pink"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/pink"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Progress bar (hidden by default) -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:visibility="gone"
            android:indeterminateTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/pink"
            android:textSize="30sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>




    </LinearLayout>

</ScrollView>